# owl-vit-streamlit

./: README.md  main.py  pyproject.toml  test_inference.py  utils.py
