[project]
name = "owl-vit-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
